added map-struct - controller CRUD ops for individual

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.devtools.add-properties=true
 
 #Database connection
 spring.datasource.url=jdbc:postgresql://localhost:54321/bank_db
-spring.datasource.username=user
+spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Hibernate settings
