--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
 			<version>1.4.2.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.intecbrussel</groupId>
+			<artifactId>commons-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
