--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,12 @@
 			<artifactId>jakarta.validation-api</artifactId>
 			<version>2.0.2</version>
 		</dependency>
-
-
-<!--	<dependency>
+		<dependency>
 			<groupId>com.intecbrussel</groupId>
-			<artifactId>commons-service</artifactId>
+			<artifactId>commons-lib</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>	-->
+<!--			<scope>compile</scope>-->
+		</dependency>
 
 
 	</dependencies>
