--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+<!--	<parent>-->
+<!--		<groupId>com.intecbrussel</groupId>-->
+<!--		<artifactId>bankingapp</artifactId>-->
+<!--		<version>0.0.1-SNAPSHOT</version>-->
+<!--		<relativePath>../banking-master/pom.xml</relativePath>-->
+<!--	</parent>-->
+
 	<parent>
-		<groupId>com.intecbrussel</groupId>
-		<artifactId>bankingapp</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../banking-master/pom.xml</relativePath>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.1.5</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<artifactId>banking-clients-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -16,7 +24,12 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
